# pgetopt

./: CMakeLists.txt  README.md  pgetopt.c  pgetopt.h
.devcontainer/: devcontainer.json
cmake/: config.cmake.in
example/: CMakeLists.txt  main.c
